--- a/rule4be/templates/rule4be/main.html
+++ b/rule4be/templates/rule4be/main.html
@@ -57,5 +57,12 @@
             </div>
         </div>
     </div>
+    <style>
+        .bg-custom-pattern {
+            background-color: #ffffff;
+            background-size: 4px 4px;
+            background-image: repeating-linear-gradient(45deg, #f0f0f0 0, #f0f0f0 0.4px, #ffffff 0, #ffffff 50%);
+        }
+    </style>
 </body>
 </html>
