Start initial login form styling

--- a/rule4be/templates/rule4be/aols.html
+++ b/rule4be/templates/rule4be/aols.html
@@ -97,5 +97,5 @@
     });
 </script>
 <!-- Display the result of the login attempt -->
-<div id="login-result"></div>
+<!-- <div id="login-result"></div> -->
 {% endblock %}
