--- a/rule4be/templates/rule4be/main.html
+++ b/rule4be/templates/rule4be/main.html
@@ -40,7 +40,7 @@
 
 <body class="bg-white">
     <main class="w-full min-h-screen flex flex-col">
-        <div class="page-content__container mx-auto lg:w-[1440px] mt-5">
+        <div id="pageContent" class="page-content__container mx-auto lg:w-[1440px] mt-5">
             {% block content %}
 
             {% endblock %}
