--- a/rule4be/templates/rule4be/login.html
+++ b/rule4be/templates/rule4be/login.html
@@ -6,28 +6,32 @@
     <div class="page__intro mx-auto">Page intro content</div>
     <div class="grid grid-cols-2 gap-4 bg-custom-pattern p-5 mt-12">
         <div class="login__container bg-white p-5">
-            <h2>Login</h2>
+            <h2 class="form__title">Login</h2>
             <!-- HTMX form to handle login -->
-            <form hx-post="{% url 'load_login_page' %}" hx-trigger="submit" hx-target="#login-form" id="login-form">
+            <form
+                id="login-form"
+                hx-post="{% url 'load_login_page' %}"
+                hx-trigger="submit"
+                hx-target="#login-form">
                 {% csrf_token %}
                 <!-- Include the necessary input fields for login -->
-                <div>
-                    <label for="username">Username:</label>
-                    <input type="text" name="username" id="username" required>
+                <div class="form__label-field">
+                    <label class="form__label" for="username">Username:</label>
+                    <input class="form__intput" type="text" name="username" id="username" required>
+                </div>
+                <div class="form__label-field">
+                    <label class="form__label" for="password">Password:</label>
+                    <input class="form__intput" type="password" name="password" id="password" required>
                 </div>
                 <div>
-                    <label for="password">Password:</label>
-                    <input type="password" name="password" id="password" required>
-                </div>
-                <div>
-                    <button type="submit">Login</button>
+                    <button class="form__submit button button--primary" type="submit">Log In</button>
                 </div>
             </form>
         </div>
         <div class="signup__container bg-white p-5">
-            <h2>Sign Up</h2>
-            <p>Sign up to create an account</p>
-            <a href="{% url 'signup' %}">Sign Up</a>
+            <h2 class="form__title">Sign Up</h2>
+            <p class="text-xl">Sign up to create an account</p>
+            <a class="button button--default button--outline" href="{% url 'signup' %}">Sign Up</a>
     </div>
 </div>
 
